# wyat-ai

./: .gitignore  COINGECKO_URL_FIX.md  CORS_CONFIGURATION.md  DEBUGGING_PROJECTS.md  DEPLOYMENT_CHECKLIST.md  DOMAIN_CHANGE_CHECKLIST.md  FEATURE_24H_CHANGE.md  FEATURE_BROKERAGE_ACCOUNT.md  IOS_PWA_PASSCODE_IMPLEMENTATION.md  JOURNAL_LOADING_FIX.md  MIGRATION_REVIEW_HKD_TO_USD.md  NEXTJS_16_UPGRADE.md  OPENAI_PDF_EXTRACTION_IMPLEMENTATION.md  PLAID_IMPLEMENTATION_SUMMARY.md  PREFERENCES_STORE_USAGE.md  PRE_DEPLOYMENT_TEST_REPORT.md  PROJECTS_FEATURE_SUMMARY.md  README.md  SECURITY.md  TIMEZONE_GUIDE.md  TYPOGRAPHY_COMPONENTS_FIX.md  openapi-schema.json  test_get_transaction_by_id.sh  test_pdf_extraction.sh  test_plaid_integration.sh  test_transactions_api.sh
backend/: .gitignore  Cargo.toml  env.example  extraction_result.json  journal.json  test_journal_search.sh  test_meta_crud.sh  test_oura_endpoints.sh
backend/data/: Chase6886_Activity20250908_20251007_20251009.CSV  ZA-Bank_manually-formatted-csv.csv  capital.extract_bank_statement.md  checking_2025-09-04.csv  checking_2025-09-04_row-previews.csv  checking_2025-09-04_text-only.csv
backend/scripts/: backup_journal.sh
backend/src/: capital.rs  journal.rs  lib.rs  main.rs  meta.rs  oura.rs  projects.rs  storage.rs  vitals.rs  workout.rs
backend/src/services/: ai_prompts.rs  coingecko.rs  data_feeds.rs  extraction.rs  mod.rs  openai.rs  oura.rs  pdf.rs  storage.rs  storage_http.rs
backend/tests/: test_enhanced_search.sh  test_exercise_types.sh  test_meta_patch.sh
backend/vitals/: heartrate.json  sleep.json  workout.json
docs/: APP_WIDE_PASSCODE_GUARD.md  BLOCKCHAIN_EXPLORER_CONFIG.md  COINGECKO_MODULARIZATION.md  DEBUG_LOGGING_GUIDE.md  EXTRACTION_WORKFLOW_V2.md  FEATURE_BROKERAGE_ACCOUNT.md  FEATURE_COST_BASIS_TRACKING.md  FEATURE_REALTIME_PRICES.md  IOS_PWA_PASSCODE_HANDLING.md  JOURNAL_INTEGRATION_EXAMPLE.md  PLAID_INTEGRATION_GUIDE.md  PLAID_LOCALHOST_PRODUCTION.md  PREFERENCES_STORE_USAGE.md  PROJECTS_FEATURE.md  README.md  SETUP_GUIDE.md  TESTS_CONSOLIDATION.md  TEST_DOCUMENT_STORE.md  TIMEZONE_IMPLEMENTATION_SUMMARY.md
frontend/: ZUSTAND_MIGRATION_GUIDE.md  empty-module.js  env.local.example  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json  privacy-policy.md  terms-of-use.md
tests/: README.md  run_all.sh
tests/api/: test_enhanced_search.sh  test_exercise_types.sh  test_get_entries_by_day.sh  test_journal_search.sh  test_meta_crud.sh  test_meta_endpoints.sh  test_meta_patch.sh  test_oura_endpoints.sh
tests/integration/: test_24h_change.sh  test_account_creation.sh  test_coingecko_modular.sh  test_coingecko_ping.sh  (+6 more)
(+85 files in other folders)
