[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.4", features = ["cors"] }
hyper = "0.14"
plaid = "9"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures = "0.3"
urlencoding = "2.1"