[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "wyat_ai_backend"
path = "src/lib.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tower-http = { version = "0.4", features = ["cors"] }
hyper = "0.14"
plaid = "9"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures = "0.3"
urlencoding = "2.1"
async-openai = "0.15"
lopdf = "0.31"
regex = "1.10"
thiserror = "1.0"
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
rust_decimal = { version = "1", features = ["serde"] }
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
csv = "1"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "seed_za_bank_csv"
path = "src/bin/seed_za_bank_csv.rs"

[[bin]]
name = "patch_hkd_pnl_to_usd"
path = "src/bin/patch_hkd_pnl_to_usd.rs"

[[bin]]
name = "backfill_tx_type"
path = "src/bin/backfill_tx_type.rs"